made changes to CSS

--- a/index.html
+++ b/index.html
@@ -15,9 +15,47 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World</h1>
-      <a href="" class="btn btn-primary">Click me</a>
+      <div class="westher-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+      <h1>New York</h1>
+      <ul>
+        <li>Friday 05:00</li>
+        <li>Clear</li>
+      </ul>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <div class="d-flex weather-temperature">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+            alt="Clear"
+            class="float-left"
+          />
+          <div class="float-left">
+         <strong>12</strong>
+         <span class="units">°C | <a href "#">°F</a></span>
+        </div>
+        </div>
+        </div>
+        <div class="col-6">
+        <ul>
+          <li>Precipitation: 0%
+
+          </li>
+          <li>
+            Humidity: 73%
+    
+          </li>
+          <li>
+            Windy: 2mph
+          </li>
+        </ul>
+      </div>
     </div>
+    <small>
+      Open-source code, by Sonam Rao
+    </small>
     <script src="src/index.js"></script>
   </body>
 </html>
