--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="src/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
@@ -15,13 +17,13 @@
   </head>
   <body>
     <div class="container">
-      <div class="westher-app-wrapper">
+      <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-      <h1>New York</h1>
+      <h1 id="city"></h1>
       <ul>
         <li>Friday 05:00</li>
-        <li>Clear</li>
+        <li id="desciption"></li>
       </ul>
       </div>
       <div class="row">
@@ -30,11 +32,12 @@
           <img
             src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
             alt="Clear"
+            id = "icon"
             class="float-left"
           />
           <div class="float-left">
-         <strong>12</strong>
-         <span class="units">°C | <a href "#">°F</a></span>
+         <strong id="temperature"></strong>
+         <span class="units">°C | <a>°F</a></span>
         </div>
         </div>
         </div>
