--- a/index.html
+++ b/index.html
@@ -27,17 +27,22 @@
             placeholder="Type a city..."
             class="form-control"
             id="city-input"
+            autocomplete="off"
             />
             </div>
             <div class="col-3">
-            <input type="submit" value="Search" class="btn btn-primary" />
+            <input 
+            type="submit" 
+            value="Search" 
+            class="btn btn-primary" 
+            />
             </div>
             </div>
           </form>
           <div class="overview">
       <h1 id="city"></h1>
       <ul>
-        <li>Friday 05:00</li>
+        <li>Last updated: <span id="date"></span></li>
         <li id="desciption"></li>
       </ul>
       </div>
@@ -58,16 +63,8 @@
         </div>
         <div class="col-6">
         <ul>
-          <li>Precipitation: 0%
-
-          </li>
-          <li>
-            Humidity: 73%
-    
-          </li>
-          <li>
-            Windy: 2mph
-          </li>
+         <li>Humidity: <span id="humidity"></span>%</li>
+          <li>Wind: <span id="wind"></span> m/h</li>
         </ul>
       </div>
     </div>
