added GitHub repository

--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
       </div>
     </div>
     <small>
-      Open-source code, by Sonam Rao
-    </small>
+          <a
+            href="https://github.com/sonamkapadia/vanilla-weather-app"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Sonam Rao
+        </small>
     <script src="src/index.js"></script>
   </body>
 </html>
