--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@
         </ul>
       </div>
     </div>
+    <div class="weather-forecast" id="forecast">
+      <div class="row">
+        <div class="col-2">
+         <div class="weather-forecast-date">Thu</div>
+          <img 
+          src="https://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png" 
+          alt=""
+          width="36"
+          />
+          <div class="weather-forecast-temperatures">
+                  <span class="weather-forecast-temperature-max"> 18° </span>
+                  <span class="weather-forecast-temperature-min"> 12° </span>
+        </div>
+        </div>
+      </div>
+    </div>
+
+    </div>
     <small>
           <a
             href="https://github.com/sonamkapadia/vanilla-weather-app"
