--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           />
           <div class="float-left">
          <strong id="temperature"></strong>
-         <span class="units">°C | <a>°F</a></span>
+         <span class="units">°C</span>
         </div>
         </div>
         </div>
@@ -79,6 +79,7 @@
           />
           <div class="weather-forecast-temperatures">
                   <span class="weather-forecast-temperature-max"> 18° </span>
+                  <span>/</span>
                   <span class="weather-forecast-temperature-min"> 12° </span>
         </div>
         </div>
@@ -90,7 +91,7 @@
           <a
             href="https://github.com/sonamkapadia/vanilla-weather-app"
             target="_blank"
-            >Open-source code</a
+            ><strong>Open-source code</strong></a
           >
           by Sonam Rao
         </small>
